Add Checkstyle plugin for code formatting validation
Configure maven-checkstyle-plugin 3.6.0 with Checkstyle 10.21.4
running on the validate phase. Rules enforce consistent imports,
naming conventions, whitespace, braces and coding standards.

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <jjwt.version>0.12.5</jjwt.version>
         <springdoc.version>2.8.4</springdoc.version>
         <bucket4j.version>8.7.0</bucket4j.version>
+        <checkstyle.version>10.21.4</checkstyle.version>
     </properties>
 
     <dependencies>
@@ -130,6 +131,33 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>3.6.0</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.puppycrawl.tools</groupId>
+                        <artifactId>checkstyle</artifactId>
+                        <version>${checkstyle.version}</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <configLocation>checkstyle.xml</configLocation>
+                    <consoleOutput>true</consoleOutput>
+                    <failsOnError>true</failsOnError>
+                    <includeTestSourceRoots>true</includeTestSourceRoots>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>validate</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
