--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,6 +31,11 @@ region:
     api:
       url: ${REGION_EXTERNAL_API_URL:https://integrador-argus-api.geia.vip/v1/regionais}
 
+rate-limit:
+  capacity: ${RATE_LIMIT_CAPACITY:10}
+  refill-period-minutes: ${RATE_LIMIT_REFILL_PERIOD_MINUTES:1}
+  expiration-minutes: ${RATE_LIMIT_EXPIRATION_MINUTES:2}
+
 cors:
   allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:8080}
 
